<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="action__add_vault">Add vault</string>
    <string name="action__restore_vault">Restore backup</string>
    <string name="action__donate">Donate</string>
    <string name="action__support">Help Desk</string>
    <string name="action__about">About</string>
    <string name="action__switch_interface">Switch Interface</string>
    <string name="App__name">Secrecy</string>
    <string name="CANCEL">Cancel</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="Dialog_header__import_files">Import Files to Secrecy</string>
    <string name="Dialog_header__pick_file">Pick a File…</string>
    <string name="Donation__buy_button">BUY DONATION PACKAGE</string>
    <string name="Donation__encouragement">			By donating, you are:\n
            \n
			• Acknowledging my hardwork\n
			• Investing in the future of this software\n
			• Buying me coffee for college exam :)\n
			• Helping me buy expensive Medical reference books\n
            \n
			More importantly…\n
            \n
		    By donating, you can enjoy many more advanced functions.</string>
    <string name="File__nothing_here_message">Try adding files here</string>
    <string name="OK">OK</string>
    <string name="Page_header__choose_folder">Choose a Folder</string>
    <string name="Page_header__donation">Buy me a coffee!</string>
    <string name="Page_header__files">Files</string>
    <string name="Page_header__gallery">Gallery</string>
    <string name="Page_header__settings">Settings</string>
    <string name="Page_header__vaults">Vaults</string>
    <string name="Page_header__about">About</string>
    <string name="Stealth__no_telephony_message">Tablets without phone function is not supported at the time. Please stay tuned!</string>
    <string name="Stealth__no_telephony">Opps… Hi tablets</string>
    <string name="Tutorial__long_click_to_rename">Long click to rename vaults. Try me!</string>
    <string name="Tutorial__swipe_to_delete">Swipe to delete vaults. Try me!</string>
    <string name="Vault__confirm_password_hint">Confirm Password</string>
    <string name="Vault__confirm_delete">Confirm delete?</string>
    <string name="Vault__nothing_here_message">Try creating a new vault</string>
    <string name="Vault__nothing_here">There\'s nothing here!</string>
    <string name="Vault__password">Password</string>
    <string name="Vault__vault_name_hint">Vault Name</string>
    <string name="Vault__vault_password_hint">Password</string>
    <string name="Dialog__help_centre_tutorial">Don\'t panic, just ask!</string>
    <string name="Dialog__help_centre_tutorial_message">Do you know we have a help centre? Come if you have questions, suggestions, or if you just want to have a chit-chat.</string>
    <string name="Stealth__finish">You\'re all set and ready to go! We will now hide the app icon. It will be gone after you reboot. Again, remember your secret code:</string>
    <string name="Error__error_processing_purchase">Error processing the purchase. It is probably cancelled mid-way.</string>
    <string name="Error__check_play_store">Problem setting up in-app billing. Please check your Play store.</string>
    <string name="Dialog__purchased">Already donated!</string>
    <string name="Dialog__purchase_message">Thank you for purchasing the Donation Package!</string>
    <string name="Error__cannot_set_up_IAP">Problem setting up in-app billing. Please check your Play store.</string>
    <string name="App__slogan">Be safe around geeks™</string>
    <string name="Vault__old_password">Old password</string>
    <string name="Vault__new_password">New password</string>
    <string name="Vault__confirm_new_password">Confirm new password</string>
    <string name="Vault__change_password">Change password</string>
    <string name="Error__password_no_match_message">The passwords you have entered does not match!</string>
    <string name="Error__change_password_failed">Error changing password</string>
    <string name="Error__change_password_failed_message">Changing the password has failed! Maybe the old password was wrong.</string>
    <string name="Vault__change_password_ok">Password changed</string>
    <string name="Vault__change_password_ok_message">The password for your vault has been changed! Please login to your vault with your new password.</string>
    <string name="Error__password_empty_message">Password must not be empty!</string>
    <string name="Error__old_vault_format_message">Vault needs to be updated to the new encryption format!</string>
    <string name="Error__old_vault_format">Vault update required</string>
    <string name="Upgrade__backup_beforehand_message">Would you like to create a backup of your vault? Click cancel to continue the update without a backup!</string>
    <string name="Upgrade__backup_beforehand">Backup beforehand?</string>
    <string name="Error__updating_vault">Update error</string>
    <string name="Error__updating_vault_message">Maybe you entered the wrong password?</string>
    <string name="Vault__vault_updated">Vault updated</string>
    <string name="Vault__vault_updated_message">Your vault has been updated to the new format.</string>
    <string name="action_select_all">Select all</string>
    <string name="Vault__initializing">Initializing Vault…</string>
    <string name="Vault_updating">Vault is updating…</string>
    <string name="Vault__changing_password">Changing password…</string>
    <string name="Restore__overwrite_alert">Restoring a vault would delete the existing version. Continue?</string>
    <string name="Settings_max_image_size">Maximal image size</string>
    <string name="Settings__performance">Performance</string>
    <string name="Settings_sort_vault_content">Sort files by</string>
    <string name="Chooser__new_folder_name_hint">New Folder Name</string>
    <string-array name="array_image_size_entries">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="array_vault_sort_entries">
        <item>Alphabet</item>
        <item>Alphabet, group by type</item>
        <item>Last Modified Date</item>
    </string-array>
</resources>