<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_paper">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tag"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="@dimen/header_paper_height"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/list_item_text_from_margin"
                android:paddingRight="@dimen/list_item_text_from_margin"
                android:text="@string/Page_header__vaults"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_secondary" />

            <LinearLayout
                android:id="@+id/list"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/tag"
                android:animateLayoutChanges="true"
                android:drawSelectorOnTop="true"
                android:layoutMode="clipBounds"
                android:orientation="vertical" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:indeterminate="true"
                android:visibility="gone" />
        </RelativeLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vault__nothing_here"
            android:textColor="@color/primary"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vault__nothing_here_message"
            android:textColor="@color/accent_light"
            android:textSize="18sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_paper_height"
        android:background="@color/primary">

        <TextView
            android:id="@+id/actionBarTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_text_height"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/list_item_text_from_margin"
            android:layout_marginStart="@dimen/list_item_text_from_margin"
            android:gravity="center_vertical"
            android:text="@string/App__name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title_size" />
    </FrameLayout>

</RelativeLayout>