<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_paper">


    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tag"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/margin_from_edge"
            android:paddingRight="@dimen/margin_from_edge"
            android:text="@string/Page_header__files"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_secondary" />


        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/tag"
            android:animateLayoutChanges="true"
            android:choiceMode="multipleChoice"
            android:divider="@android:color/transparent"
            android:drawSelectorOnTop="true"
            android:layoutMode="clipBounds" />


        <GridView
            android:id="@+id/gridView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/tag"
            android:animateLayoutChanges="true"
            android:choiceMode="multipleChoice"
            android:columnWidth="120dp"
            android:divider="@android:color/transparent"
            android:drawSelectorOnTop="true"
            android:horizontalSpacing="0dp"
            android:layoutMode="clipBounds"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:verticalSpacing="0dp" />

        <LinearLayout
            android:id="@+id/nothing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Vault__nothing_here"
                android:textColor="@color/primary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/File__nothing_here_message"
                android:textColor="@color/accent_light"
                android:textSize="18sp" />
        </LinearLayout>


    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>